@@ -94,7 +94,7 @@ install it and also a shell script that runs make using it.
 </li>
 <li>tdm-gcc 4.9.2
 </li>
-<li>Visual C++ 2013
+<li>Visual C++ 2013 and Visual C++ 2015
 </li>
 <li>remote clang execution on OS X using SSH
 </li>
