@@ -24,7 +24,7 @@ For every (cross)compiler, there are instructions (or scripts) how to
 install it and also a shell script that runs make using it.
 - gcc 4.9.2 compiled against libc from Debian Lenny using crosstool-ng
 - tdm-gcc 4.9.2
-- Visual C++ 2013
+- Visual C++ 2013 and Visual C++ 2015
 - remote clang execution on OS X using SSH
 
 Copyright 2014 by Institute of Formal and Applied Linguistics, Faculty of
